Remove homelab project and use default project

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-  - resources/homelab.project.yaml
+  # - resources/homelab.namespace.yaml
   - apps/system/system.applicationset.yaml
   
