--- a/apps/system/system.applicationset.yaml
+++ b/apps/system/system.applicationset.yaml
@@ -14,11 +14,11 @@ spec:
     metadata:
       name: '{{path.basename}}'
     spec:
-      project: homelab
+      project: default
       source:
         repoURL: https://github.com/aaronsgithub/homelab.git
         targetRevision: HEAD
-        path: '{{.path.path.}}'
+        path: '{{.path}}'
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
