--- a/apps/system/system.applicationset.yaml
+++ b/apps/system/system.applicationset.yaml
@@ -18,7 +18,7 @@ spec:
       source:
         repoURL: https://github.com/aaronsgithub/homelab.git
         targetRevision: HEAD
-        path: '{{.path}}'
+        path: '{{path}}'
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
