Add homelab project back

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-  # - resources/homelab.namespace.yaml
+  - resources/homelab.project.yaml
   - apps/system/system.applicationset.yaml
   
