--- a/apps/system/system.applicationset.yaml
+++ b/apps/system/system.applicationset.yaml
@@ -14,7 +14,7 @@ spec:
     metadata:
       name: '{{path.basename}}'
     spec:
-      project: default
+      project: homelab
       source:
         repoURL: https://github.com/aaronsgithub/homelab.git
         targetRevision: HEAD
