--- a/resources/homelab.project.yaml
+++ b/resources/homelab.project.yaml
@@ -10,5 +10,8 @@ spec:
   destinations:
   - server: https://kubernetes.default.svc
     namespace: '*'
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'
 
 
