Ignore OutOfSync errors caused by mutating webhooks producing caBundle diffs

--- a/apps/system/argocd/kustomization.yaml
+++ b/apps/system/argocd/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   - resources/argocd.ingressroute.yaml
     
 patchesStrategicMerge:
+  - patches/argocd-cm.patch.yaml
   - patches/argocd-cmd-params-cm.patch.yaml
 
