--- a/apps/system/argocd/patches/argocd-cm.patch.yaml
+++ b/apps/system/argocd/patches/argocd-cm.patch.yaml
@@ -8,3 +8,4 @@ data:
   resource.customizations.ignoreDifferences.admissionregistration.k8s.io_MutatingWebhookConfiguration: |
     jqPathExpressions:
     - '.webhooks[]?.clientConfig.caBundle'
+    - '.webhook.clientConfig.caBundle'
