Update system diffing customization

--- a/apps/system/argocd/patches/argocd-cm.patch.yaml
+++ b/apps/system/argocd/patches/argocd-cm.patch.yaml
@@ -8,4 +8,4 @@ data:
   resource.customizations.ignoreDifferences.admissionregistration.k8s.io_MutatingWebhookConfiguration: |
     jqPathExpressions:
     - '.webhooks[]?.clientConfig.caBundle'
-    - '.webhook.clientConfig.caBundle'
+    - '.spec.conversion.webhook.clientConfig.caBundle'
