Move ignore differences from cluster level to appset level

--- a/apps/system/system.applicationset.yaml
+++ b/apps/system/system.applicationset.yaml
@@ -14,6 +14,10 @@ spec:
     metadata:
       name: '{{path.basename}}'
     spec:
+      ignoreDifferences:
+      - kind: CustomResourceDefinition
+        jqPathExpressions:
+          - '.spec.conversion.webhook.clientConfig.caBundle'
       project: homelab
       source:
         repoURL: https://github.com/aaronsgithub/homelab.git
