--- a/apps/system/system.applicationset.yaml
+++ b/apps/system/system.applicationset.yaml
@@ -16,6 +16,7 @@ spec:
     spec:
       ignoreDifferences:
       - kind: CustomResourceDefinition
+        group: apiextensions.k8s.io
         jqPathExpressions:
           - '.spec.conversion.webhook.clientConfig.caBundle'
       project: homelab
