Add monitoring stack namespace to wildcard cert

--- a/appsets/system/certificates/patches/wildcard.bert.local-tls.certificate.cert-manager.reflector.namespaces.yaml
+++ b/appsets/system/certificates/patches/wildcard.bert.local-tls.certificate.cert-manager.reflector.namespaces.yaml
@@ -8,5 +8,5 @@ metadata:
 spec:
   secretTemplate:
     annotations:
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "kube-system,argocd"
-      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "kube-system,argocd"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "kube-system,argocd,monitoring"
+      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "kube-system,argocd,monitoring"
